deploy/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: kube-ops-view-redis
    version: v0.0.1
  name: kube-ops-view-redis
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-ops-view-redis
  template:
    metadata:
      labels:
        application: kube-ops-view-redis
        version: v0.0.1
    spec:
      # Test
      serviceAccountName: kube-ops-view-redis
      # Since there are read-only filesystems, important data is copied to an
      # emptyDir via an initContainer to avoid read-only errors
      containers:
      - name: redis
        # bitnami/redis is chosen over library/redis so support out-of-the-box
        # rootless containers
        image: bitnami/redis:5.0.5
        ports:
        - containerPort: 6379
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 6379
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        volumeMounts:
        - mountPath: /bitnami/redis/data
          name: redis-bitnami-data
        - mountPath: /opt/bitnami/redis
          name: bitnami-fs
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
      volumes:
      - name: redis-bitnami-data
        emptyDir: {}
      - name: bitnami-fs
        emptyDir: {}
